# voice-soundboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  GITHUB_SETUP.md  LICENSE  PRESS_RELEASE.md  PRESS_RELEASE_v1.2.0.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SOCIAL_MEDIA.md  TEST_PLAN.md  llms.txt  mcp-config.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release-collaborate.yml
benchmarks/: README.md  bench_basic.py
claude_adventures/: index.html  server.py
claude_collaborate/: README.md  capture-viewer.html  chess.html  claude_responses.jsonl  code-playground.html  github-toolkit.html  index.html  messages.jsonl  server.py  template.html  whiteboard.html  ws_bridge.py
demos/: README.md  assistant.py  character.py  narrator.py
demos/web/: index.html
docs/: API_STABILITY.md  ARCHITECTURE.md  FEATURE_FLAGS.md  GLOSSARY.md  MODULE_AUDIT.md  RELEASE.md  SECURITY_SUMMARY.md  START_HERE.md  SYSTEM_OVERVIEW.md  V1_CONTRACT.md  voice-studio-roadmap.md
docs/research/demo/: DEMO_SCRIPT.md
docs/research/vocology/: README.md  disentanglement.md  humanizing-ai-vocals.md  tts-architecture-2026.md  voice-metrics-reference.md  voice-quality-parameters.md
docs/vocology/: PRESET_ROADMAP.md  best-practices-2026.md  phonation-types.md  prosody-control.md  prosody-deep-dive.md  vocal-biomarkers.md  voice-characteristics.md
examples/: 01_basic_speech.py  02_paralinguistic_tags.py  03_multi_speaker_dialogue.py  04_voice_cloning.py  05_emotion_control.py  06_streaming.py  07_sound_effects.py  08_ssml.py  09_websocket_client.py  10_websocket_html_client.html  11_mcp_integration.py  README.md  hello_world.py  voice_soundboard_demo.ipynb  websocket_client.py
tests/: __init__.py  test_additional_coverage_batch16.py  test_additional_coverage_batch18.py  test_additional_coverage_batch19.py  test_additional_coverage_batch20.py  test_additional_coverage_batch21.py  test_additional_coverage_batch22.py  test_additional_coverage_batch26.py  test_additional_coverage_batch27.py  test_additional_coverage_batch28.py  test_additional_coverage_batch30.py  test_additional_coverage_batch31.py  test_additional_coverage_batch32.py  test_additional_coverage_batch34.py  test_additional_coverage_batch35.py  test_additional_coverage_batch36.py  test_additional_coverage_batch4.py  test_additional_coverage_batch5.py  test_audio.py  test_audio_additional.py  test_chatterbox.py  test_cloning.py  test_codecs.py  test_config.py  test_conversion.py  test_dialogue.py  test_effects.py  test_emotion.py  test_emotions.py  test_engine.py  test_engines_base.py  test_engines_kokoro.py  test_error_handling.py  test_errors.py  test_f5tts.py  test_interpreter.py  test_llm.py  test_normalizer.py  test_phase8_crosslang.py  test_phase8_server_mcp.py  (+15 more)
tests/smoke/: conftest.py  test_api_contract.py  test_imports.py
voice_soundboard/: __init__.py  audio.py  cli.py  config.py  effects.py  emotions.py  engine.py  errors.py  exceptions.py  interpreter.py  mcp_screenshot.py  normalizer.py  security.py  server.py  ssml.py  streaming.py  web_server.py  websocket_server.py
voice_soundboard/cloning/: __init__.py  cloner.py  crosslang.py  extractor.py  library.py  separation.py
voice_soundboard/codecs/: __init__.py  base.py  dualcodec.py  llm.py  mimi.py  mock.py
voice_soundboard/conversion/: __init__.py  base.py  devices.py  realtime.py  streaming.py
voice_soundboard/dialogue/: __init__.py  engine.py  parser.py  voices.py
voice_soundboard/emotion/: __init__.py  blending.py  curves.py  parser.py  vad.py
voice_soundboard/engines/: __init__.py  base.py  chatterbox.py  f5tts.py  kokoro.py
voice_soundboard/llm/: __init__.py  context.py  conversation.py  interruption.py  pipeline.py  providers.py  streaming.py
voice_soundboard/presets/: __init__.py  catalog.py  schema.py  search.py
voice_soundboard/presets/catalog/: diverse.json  hume.json  qwen3.json  vibevoice.json  vocology.json
voice_soundboard/studio/: __init__.py  ai_assistant.py  engine.py  session.py
voice_soundboard/vocology/: __init__.py  biomarkers.py  formants.py  humanize.py  naturalness.py  parameters.py  phonation.py  presets.py  prosody.py  rhythm.py
voice_soundboard/web/: index.html
voice_soundboard/web/playground/: index.html
voice_soundboard/web/studio/: index.html  studio.css  studio.js
