[project]
name = "voice-soundboard"
version = "1.1.0"
description = "AI-powered voice soundboard with natural language control via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Dev Lab"}
]
keywords = ["tts", "text-to-speech", "mcp", "ai", "voice", "soundboard"]

dependencies = [
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "defusedxml>=0.7.1",  # SECURITY: Safe XML parsing (prevents XXE attacks)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
mcp = [
    "mcp>=1.0.0",
]
websocket = [
    "websockets>=12.0",
]
web = [
    "aiohttp>=3.9.0",
]
fallback = [
    "piper-tts>=1.2.0",
]
# Chatterbox: Paralinguistic tags, emotion exaggeration, voice cloning
chatterbox = [
    "chatterbox-tts>=0.1.0",
    "torchaudio>=2.0.0",
]
# F5-TTS: Diffusion Transformer for high-quality zero-shot voice cloning
f5tts = [
    "f5-tts>=1.0.0",
    "torchaudio>=2.0.0",
]
all = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "chatterbox-tts>=0.1.0",
    "torchaudio>=2.0.0",
    "f5-tts>=1.0.0",
]

[project.scripts]
voice-soundboard = "voice_soundboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_soundboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
