[project]
name = "voice-soundboard"
version = "1.1.0"
description = "AI-powered voice soundboard with natural language control via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = [
    "tts",
    "text-to-speech",
    "mcp",
    "ai",
    "voice",
    "soundboard",
    "voice-synthesis",
    "natural-language",
    "speech",
    "audio",
]

dependencies = [
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "defusedxml>=0.7.1",  # SECURITY: Safe XML parsing (prevents XXE attacks)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
mcp = [
    "mcp>=1.0.0",
]
websocket = [
    "websockets>=12.0",
]
web = [
    "aiohttp>=3.9.0",
]
# Kokoro TTS: High-quality neural voice synthesis (primary engine, Python 3.10-3.12 compatible)
kokoro = [
    "kokoro>=0.9.2;python_version<'3.14'",
]
# Piper TTS: Lightweight fallback for Python 3.14+ compatibility
fallback = [
    "piper-tts>=1.2.0",
]
# Chatterbox: Paralinguistic tags, emotion exaggeration, voice cloning (requires Python 3.10-3.12)
chatterbox = [
    "chatterbox-tts>=0.1.0;python_version<'3.14'",
    "torchaudio>=2.0.0;python_version<'3.14'",
]
# F5-TTS: Diffusion Transformer for high-quality zero-shot voice cloning (requires Python 3.10-3.12)
f5tts = [
    "f5-tts>=1.0.0;python_version<'3.14'",
    "torchaudio>=2.0.0;python_version<'3.14'",
]
all = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "kokoro>=0.9.2;python_version<'3.14'",
    "chatterbox-tts>=0.1.0;python_version<'3.14'",
    "torchaudio>=2.0.0",
    "f5-tts>=1.0.0;python_version<'3.14'",
]

[project.scripts]
voice-soundboard = "voice_soundboard.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/voice-soundboard"
Repository = "https://github.com/mcp-tool-shop-org/voice-soundboard"
Issues = "https://github.com/mcp-tool-shop-org/voice-soundboard/issues"
Documentation = "https://github.com/mcp-tool-shop-org/voice-soundboard#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_soundboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default: run smoke + core tests only. Skip generated (research-tier).
addopts = "-m 'not generated' --ignore=tests/generated"
markers = [
    "smoke: fast tests with no model downloads (<5s total)",
    "generated: auto-generated coverage tests (run with: pytest -m generated)",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
